--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "http-server . -p 3000 -c-1"
+    "start": "http-server . -p 3000 -c-1"
   },
   "author": "Mayank Jain",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.7.2",
+    "angular-route": "^1.7.2",
     "bootstrap": "^4.1.1",
-    "http-server": "^0.11.1"
+    "http-server": "^0.11.1",
+    "jquery": "^3.3.1"
   }
 }
