--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "http-server . -p 3000 -c-1"
+    "start": "http-server ./public -p 3000 -c-1"
   },
   "author": "Mayank Jain",
   "license": "ISC",
